--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -16,7 +16,9 @@ nav{
     justify-content: space-between;
     margin: 0px 200px;
 }
-
+.secondary-bg{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -24,6 +26,7 @@ nav{
 .dark-2{
     color: #474747;
 }
+
 
 .btn-primary{
     background-color: #FD6E0A;
@@ -102,11 +105,16 @@ main{
     margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+
+}
+/* About Styles */
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
 }
 
 .about-items{
@@ -116,4 +124,70 @@ main{
 
 .item-description{
     font-weight: 600;
+}
+
+.text-center {
+    text-align: center;
+}
+
+/* skill section styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow:0px 6px 50px 0px rgba(0, 0, 0, 0.06) ;
+}
+
+
+/* resume section styles */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 24px;
+}
+.experience-description, .experience-sub-title{
+    color: #757575;
+
+}
+
+.resume hr{
+    margin: 30px 5px;
+}
+
+.resume-download-cv{
+    margin-top: 50px;
+}
+
+
+/* footer styles  */
+
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
+
 }
